@@ -1,3 +1,14 @@
+2001-05-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirinfo.c: Modified the TIFF_BYTE definition for
+	TIFFTAG_PHOTOSHOP to use a writecount of TIFF_VARIABLE2 (-3) to
+	force use of uint32 counts instead of short counts. 
+
+	* libtiff/tif_dirwrite.c: Added support for TIFF_VARIABLE2 in the
+	case of writing TIFF_BYTE/TIFF_SBYTE fields.  
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=43
+
 2001-05-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirinfo.c: removed duplicate TIFFTAG_PHOTOSHOP as per
